--- a/WebShop/WebShop.csproj
+++ b/WebShop/WebShop.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Controllers\" />
     <Folder Include="Areas\Admin\Views\" />
+    <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
 </Project>
