--- a/WebShop/WebShop.csproj
+++ b/WebShop/WebShop.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>a470d4bb-c748-4993-9d5c-7d1259857dd6</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
