New project structure with division into smaller projects depending on functionality -DataAccess -Model -Utility

--- a/WebShop.DataAccess/WebShop.DataAccess.csproj
+++ b/WebShop.DataAccess/WebShop.DataAccess.csproj
@@ -19,6 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.EntityFrameworkCore" Version="8.0.6" />
+    <PackageReference Include="Stripe.net" Version="47.1.0" />
   </ItemGroup>
 
   <ItemGroup>
