Register using Facebook Login using Facebook

--- a/WebShop/appsettings.json
+++ b/WebShop/appsettings.json
@@ -12,5 +12,11 @@
   "Stripe": {
     "SecretKey": "secret",
     "PublishableKey": "public"
-  }
+  },
+    "Authentication": {
+      "Facebook": {
+        "AppId": "appId",
+        "AppSecret": "appSecret"
+      }
+    }
 }
